# CUDA-Qt-Framework

./: CMakeLists.txt  LICENSE  README  README.md
src/: CMakeLists.txt  main.cpp
src/cuda/: HelloCuda.cu  MainCuda.cu
src/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  OGLWidget.cpp  OGLWidget.h
